Added systemproperties via gradle build.gradle Removed MaxPermSize option from README.md (no longer supported).